Bug 575841 - When in search screen colors do not match high contrast black color scheme; ui-r=clarkbw. a=Standard8 for checkin to CLOSED TREE

--- a/mail/themes/qute/mail/quickFilterBar.css
+++ b/mail/themes/qute/mail/quickFilterBar.css
@@ -95,14 +95,14 @@
   
 }
 #threadTree[filterActive="matches"] {
-  background-color: #f2f9fc;
+
 }
 
 #quick-filter-bar[filterActive="nomatches"] {
   
 }
 #threadTree[filterActive="nomatches"] {
-  background: -moz-repeating-linear-gradient(top left -45deg, #fff0f4, #fff0f4 5px, white 5px, white 10px);
+
 }
 
 /* :::: Filter Buttons :::: */
